--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ html, body {
     height: 100%;
     padding: 0;
     margin: 0;
+    background-color: #fff0;
 }
 a {
     text-decoration: none;
@@ -72,10 +73,15 @@ a:hover {
     body {
     }
     nav {
-        width: 0;
+        width: 100%;
+        height: auto;
+        position: static;
+        background-color: #03a9f48a;
     }
     nav a:not(.photo) {
-        display: none;
+        display: block;
+        line-height: 16px;
+        margin: 0;
     }
     section.box {
         padding: 0;
