--- a/css/page.css
+++ b/css/page.css
@@ -178,11 +178,8 @@ body > nav {
 body > nav a {
     padding: 0 !important;
     padding-left: 12px !important;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
 }
-body > nav a:before {
+body > nav a::before {
     left: 4px !important;
 }
 body > nav a:focus {
@@ -193,19 +190,54 @@ body > nav .title {
     cursor: pointer;
 }
 body > nav > ul {
-    list-style-type: disc;
+    list-style: none;
+    padding: 0;
 }
 body > nav .title.active + ul {
     display: none;
 }
+body > nav li {
+    position: relative;
+    padding-left: 24px;
+}
+body > nav li::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 12px;
+    width: 1px;
+    height: 100%;
+    background-color: #999;
+}
+body > nav li::after {
+    content: "";
+    position: absolute;
+    top: 6px;
+    left: 8px;
+    width: 9px;
+    height: 9px;
+    border-radius: 5px;
+    background-color: #777;
+}
 body > nav li.h1 {
-    margin-left: 0px;
 }
-body > nav li.h2 {
-    margin-left: 8px;
+body > nav li.h2::after {
+    width: 8px;
+    height: 8px;
+    top: 8px;
+    left: 9px;
+    border-radius: 4px;
+    margin-top: -4px;
+    background-color: #888;
 }
-body > nav li.h3 {
-    margin-left: 16px;
+body > nav li.h3::after {
+    width: 6px;
+    height: 6px;
+    top: 10px;
+    left: 10px;
+    border-radius: 3px;
+    margin-top: -3px;
+    background-color: #999;
 }
 @media screen and (max-width: 920px) {
     body {
@@ -250,5 +282,8 @@ body > nav li.h3 {
     body > nav {
         position: static;
         display: block;
+    }
+    body > nav a {
+        padding: 0 !important;
     }
 }
