--- a/css/page.css
+++ b/css/page.css
@@ -10,7 +10,6 @@ html, body {
 body {
     font-size: 14px;
     background-color: #fff;
-    padding: 32px;
 }
 body > h1:first-child {
     color: var(--main);
@@ -91,30 +90,35 @@ i {
     color: var(--code);
     background: #eee;
 }
-body > section {
+body > section,
+body > footer > section {
     margin-top: 48px;
     padding-bottom: 24px;
-    max-width: 1420px;
+    max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
 }
 body > section:last-of-type::before {
     content: "已到达最底部";
 }
+body > section:last-of-type {
+    border-bottom-width: 4px;
+}
 body > section::before {
     content: "华丽的分界线";
-    position: absolute;
-    bottom: -12px;
-    color: #999;
     width: 100%;
-    text-align: center;
+    position: absolute;
     left: 0;
+    bottom: -10px;
+    text-align: center;
+    font-size: 12px;
+    color: #999;
 }
-section {
-    border-bottom: 4px solid #eaeaea;
+body > section {
+    border-bottom: 2px solid #eaeaea;
     position: relative;
 }
-section > article {
+body > section > article {
     position: relative;
     border: 1px dashed #999;
     padding: 4px;
@@ -122,7 +126,7 @@ section > article {
     clear: both;
     overflow: hidden;
 }
-section > article::after {
+body > section > article::after {
     content: "code";
     position: absolute;
     top: 4px;
@@ -136,7 +140,7 @@ section > article::after {
     background-color: var(--code);
     transform: rotate(-42deg);
 }
-section > article::before {
+body > section > article::before {
     /*content: "";*/
     position: absolute;
     width: 8px;
@@ -146,22 +150,22 @@ section > article::before {
     margin-left: -4px;
     background-color: rgba(234, 234, 234, 0.54);
 }
-section > article > pre {
+body > section > article > pre {
     width: calc(50% - 8px);
     float: left;
     margin: 4px;
     box-sizing: border-box;
 }
-section > article > pre:only-child {
+body > section > article > pre:only-child {
     width: calc(100% - 8px);
 }
-section > article > .render {
+body > section > article > .render {
     width: calc(50% - 8px);
     float: left;
     margin: 4px;
     box-sizing: border-box;
 }
-section > article > pre > code::-webkit-scrollbar {
+body > section > article > pre > code::-webkit-scrollbar {
     display: none;
 }
 body > nav {
@@ -239,18 +243,38 @@ body > nav li.h3::after {
     margin-top: -3px;
     background-color: #999;
 }
+body > footer {
+    color: #fff;
+    background-color: #1f1f1f;
+}
+body > footer .avatar {
+    border-radius: 50%;
+    display: inline-block;
+    overflow: hidden;
+    height: 80px;
+    width: 80px;
+}
+body > footer > section {
+    padding: 12px 0 8px 12px;
+}
+body > footer .pd {
+    text-align: center;
+    color: #6d6d6d;
+}
+body > footer > section > a {
+    margin-right: 16px;
+}
 @media screen and (max-width: 920px) {
     body {
-        padding: 16px;
     }
     body > section {
-        margin-top: 24px;
+        margin: 24px 12px 0;
     }
     section > article::before {
         display: none;
     }
     section > article > pre {
-        width: calc(100% - 8px);
+        width: calc(100% - 8px) !important;
         padding-right: 0;
     }
     section > article > .render {
@@ -282,8 +306,27 @@ body > nav li.h3::after {
     body > nav {
         position: static;
         display: block;
+        margin: 0 12px;
     }
     body > nav a {
         padding: 0 !important;
     }
+    body > footer .avatar {
+        width: 36px;
+        height: 36px;
+    }
+    body > footer .avatar img {
+        width: 100%;
+        height: 100%;
+    }
+    body > footer .pd {
+        margin-top: 8px;
+        font-size: 12px;
+    }
 }
+
+/* ============= 重置第三方样式 start ================== */
+.hljs {
+    background-color: #eeeeee7d !important;
+}
+/* ============= 重置第三方样式 end ================== */
