--- a/css/style.css
+++ b/css/style.css
@@ -61,21 +61,20 @@ a:hover {
 .content {
     width: 100%;
     height: 100%;
-    padding: 24px;
+    padding: 24px 12px;
+    overflow: auto;
 }
 .content a {
-    width: calc(50% - 20px);
+    width: calc(50% - 24px);
     display: inline-block;
     float: left;
     padding: 12px 0;
+    margin: 0 12px;
     border-bottom: 1px dashed #999;
     color: var(--font-blue);
 }
 .content a:hover {
     color: #5f7eff;
-}
-.content a:nth-child(2n) {
-    margin-left: 40px;
 }
 @media screen and (max-width: 920px) {
     body {
