--- a/css/page.css
+++ b/css/page.css
@@ -14,6 +14,17 @@ body {
 body > h1:first-child {
     color: var(--main);
     text-align: center;
+    position: relative;
+}
+body > h1:first-child a.logo {
+    position: absolute;
+    top: -10px;
+    left: 32px;
+    width: 60px;
+    height: 60px;
+    text-indent: -1000px;
+    background: url(../imgs/logo2-r-200X200-01.png) no-repeat center;
+    background-size: 100%;
 }
 a {
     text-decoration: none;
@@ -90,6 +101,7 @@ i {
     color: var(--code);
     background: #eee;
 }
+.container,
 body > section,
 body > footer > section {
     margin-top: 48px;
@@ -254,12 +266,11 @@ body > footer .avatar {
     height: 80px;
     width: 80px;
 }
+body > footer .avatar img {
+    width: 100%;
+}
 body > footer > section {
     padding: 12px 0 8px 12px;
-}
-body > footer .pd {
-    text-align: center;
-    color: #6d6d6d;
 }
 body > footer > section > a {
     margin-right: 16px;
@@ -267,6 +278,7 @@ body > footer > section > a {
 @media screen and (max-width: 920px) {
     body {
     }
+    .container,
     body > section {
         margin: 24px 12px 0;
     }
@@ -319,9 +331,13 @@ body > footer > section > a {
         width: 100%;
         height: 100%;
     }
-    body > footer .pd {
-        margin-top: 8px;
-        font-size: 12px;
+    body > h1:first-child {
+        font-size: 20px;
+    }
+    body > h1:first-child a.logo {
+        width: 42px;
+        height: 42px;
+        left: 10px;
     }
 }
 
