--- a/css/style.css
+++ b/css/style.css
@@ -27,9 +27,9 @@ section.box {
 }
 nav {
     width: 80px;
-    height: 100%;
+    height: calc(100% - 60px);
     position: absolute;
-    top: 0;
+    top: 60px;
     left: 0;
     text-align: center;
     background-color: rgba(61, 66, 84, 0.48);
@@ -78,6 +78,7 @@ a:hover {
 }
 @media screen and (max-width: 920px) {
     body {
+        overflow: hidden;
         background-color: #fff;
     }
     nav {
@@ -93,22 +94,42 @@ a:hover {
     section.box {
         padding: 0;
     }
+    .content {
+        padding-top: 42px;
+    }
     .content a {
         display: block;
         width: 100%;
+        margin: 0;
     }
     .content a:nth-child(2n) {
         margin-left: 0;
     }
     .photo {
         position: fixed;
+        top: -14px;
         right: 20px;
         width: 48px;
         height: 48px;
         box-shadow: 1px 1px 9px #b3b3b3;
         background-color: rgba(234, 234, 234, 0.55);
+        z-index: 2;
     }
     body > header {
+        background-color: #4285f4 !important;
+    }
+    body > header > .logo {
+        width: 100%;
+        height: 42px;
+        line-height: 42px;;
+        background-size: contain;
+        background-position-x: left;
+        text-indent: initial;
+        text-align: center;
+        color: #fff;
+    }
+    body > header > .search,
+    body > header > .search-tags {
         display: none;
     }
 }
@@ -117,11 +138,20 @@ body > header {
     position: fixed;
     top: 0;
     right: 0;
-    width: calc(100% - 80px);
+    width: 100%;
     padding: 0 24px;
     line-height: 60px;
     background-color: rgba(88, 166, 249, 0.52);
     z-index: 1;
+}
+.logo {
+    float: left;
+    margin-right: 32px;
+    width: 60px;
+    height: 60px;
+    text-indent: -1000px;
+    background: url(../imgs/logo2-r-200X200-01.png) no-repeat center;
+    background-size: 100%;
 }
 .search {
     float: left;
